--- a/kr_rd_status.html
+++ b/kr_rd_status.html
@@ -16,9 +16,9 @@
                 <div class="dropdown">
                     <a href="index.html">R&D 통합 플랫폼 소개</a>
                     <div class="dropdown-content">
-                        <a href="link1.html">현황</a>
-                        <a href="link1.html">보유기술</a>
-                        <a href="link1.html">참여인력</a>
+                        <a href="#status">현황</a>
+                        <a href="#related-sites">관련사이트</a>
+                        <a href="#info-page">참여인력</a>
                     </div>
                 </div>
                 <span>|</span>
@@ -39,7 +39,7 @@
                     <a href="rd_service.html">서비스</a>
                     <div class="dropdown-content">
                         <a href="rd_service.html">공지사항</a>
-                        <a href="link1.html">게시판</a>
+                        <a href="rd_q_and_a.html">Q&A</a>
                     </div>
                 </div>
                 
@@ -47,7 +47,7 @@
                 <div class="dropdown">
                     <a href="rd_partnership.html">사업제휴</a>
                     <div class="dropdown-content">
-                        <a href="link1.html">게시판</a>
+                        <a href="rd_online_board.html">게시판</a>
                     </div>
                 </div>
             </nav>
@@ -93,7 +93,7 @@
     <footer>
         <p>© 2024 Integrated R&D Development Platform</p>
         <nav>
-            <a href="#">홈</a> | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a>
+            <a href="index.html">홈</a> | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a>
         </nav>
     </footer>
 </body>
