--- a/rd_partnership.html
+++ b/rd_partnership.html
@@ -51,8 +51,8 @@
                 </div>
             </nav>
             <div class="right-nav">
-                <a href="login.html">로그인</a>
-                <a href="signup.html">회원가입</a>
+                <a href="rd_login.html">로그인</a>
+                <a href="rd_signup.html">회원가입</a>
             </div>
         </div>
     </header>
@@ -109,22 +109,22 @@
                 <div class="table-row">
                     <div class="table-cell">정재현</div>
                     <div class="table-cell">○○○○ 문의드립니다</div>
-                    <div class="table-cell"></div>
+                    <div class="table-cell">처리완료</div>
                 </div>
                 <div class="table-row">
                     <div class="table-cell">이인형</div>
                     <div class="table-cell">첨부파일을 참조하세요</div>
-                    <div class="table-cell"></div>
+                    <div class="table-cell">진행 중</div>
                 </div>
                 <div class="table-row">
                     <div class="table-cell">이동혁</div>
                     <div class="table-cell">첨부파일을 참조하세요</div>
-                    <div class="table-cell"></div>
+                    <div class="table-cell">진행 중</div>
                 </div>
                 <div class="table-row">
                     <div class="table-cell">김민정</div>
                     <div class="table-cell">안녕하세요. (주)○○ 김민정 사원입니다...</div>
-                    <div class="table-cell"></div>
+                    <div class="table-cell">처리완료</div>
                 </div>
                 <!-- 다른 행 추가 -->
             </div>
@@ -136,6 +136,10 @@
                 <span class="page">4</span>
                 <span class="page">5</span>
                 <span class="page">&raquo;</span>
+            </div>
+            <!-- 더보기 링크 추가 -->
+            <div class="more-link" style="text-align: right; margin-top: 10px;">
+                <a href="rd_online_board.html">더보기 &raquo;</a>
             </div>
         </div>
     
