--- a/rd_signup.html
+++ b/rd_signup.html
@@ -64,7 +64,10 @@
                 <input type="password" placeholder="비밀번호 확인" required>
                 <button type="submit">가입하기</button>
             </form>
-            <a href="rd_login.html" class="login-link">Login</a>
+            <div class="additional-links">
+                <a href="rd_login.html" class="login-link">Login</a> |
+                <a href="find_id_pw.html" class="find-id-pw-link">ID/PW 찾기</a>
+            </div>
         </div>
     </section>
 
