--- a/rd_notice_write.html
+++ b/rd_notice_write.html
@@ -51,8 +51,8 @@
                 </div>
             </nav>
             <div class="right-nav">
-                <a href="login.html">로그인</a>
-                <a href="signup.html">회원가입</a>
+                <a href="rd_login.html">로그인</a>
+                <a href="rd_signup.html">회원가입</a>
             </div>
         </div>
     </header>
