--- a/rd_online_board.html
+++ b/rd_online_board.html
@@ -51,8 +51,8 @@
                 </div>
             </nav>
             <div class="right-nav">
-                <a href="login.html">로그인</a>
-                <a href="signup.html">회원가입</a>
+                <a href="rd_login.html">로그인</a>
+                <a href="rd_signup.html">회원가입</a>
             </div>
         </div>
     </header>
@@ -61,9 +61,14 @@
     <section class="online-board">
         <h3>온라인 확인 게시판</h3>
         <div class="search-bar">
-            <label for="search">문의자명</label>
-            <input type="text" id="search" placeholder="문의자명을 입력하세요">
-            <button type="button">검색</button>
+            <label for="search">검색어</label>
+            <input type="text" id="search" placeholder="검색어를 입력하세요" oninput="filterTable()">
+            <select id="filter-category" onchange="filterTable()">
+                <option value="all">전체</option>
+                <option value="name">문의자명</option>
+                <option value="title">제목</option>
+                <option value="status">처리상태</option>
+            </select>
         </div>
         <div class="table">
             <div class="table-row header">
@@ -74,22 +79,22 @@
             <div class="table-row">
                 <div class="table-cell">정재현</div>
                 <div class="table-cell">○○○○ 문의드립니다</div>
-                <div class="table-cell"></div>
+                <div class="table-cell">처리완료</div>
             </div>
             <div class="table-row">
                 <div class="table-cell">이인형</div>
                 <div class="table-cell">첨부파일을 참조하세요</div>
-                <div class="table-cell"></div>
+                <div class="table-cell">진행 중</div>
             </div>
             <div class="table-row">
                 <div class="table-cell">이동혁</div>
                 <div class="table-cell">첨부파일을 참조하세요</div>
-                <div class="table-cell"></div>
+                <div class="table-cell">진행 중</div>
             </div>
             <div class="table-row">
                 <div class="table-cell">김민정</div>
                 <div class="table-cell">안녕하세요. (주)○○ 김민정 사원입니다...</div>
-                <div class="table-cell"></div>
+                <div class="table-cell">처리완료</div>
             </div>
         </div>
         <div class="pagination">
@@ -110,5 +115,35 @@
             <a href="index.html">홈</a> | <a href="#">이용약관</a> | <a href="#">개인정보 처리방침</a>
         </nav>
     </footer>
+
+    <script>
+        function filterTable() {
+            const searchInput = document.getElementById("search").value.toLowerCase();
+            const filterCategory = document.getElementById("filter-category").value;
+            const rows = document.querySelectorAll(".table .table-row:not(.header)");
+
+            rows.forEach(row => {
+                const name = row.children[0].textContent.toLowerCase();
+                const title = row.children[1].textContent.toLowerCase();
+                const status = row.children[2].textContent.toLowerCase();
+                
+                let isVisible = false;
+
+                // 필터 기준에 따라 검색어가 일치하는지 확인
+                if (filterCategory === "all") {
+                    isVisible = name.includes(searchInput) || title.includes(searchInput) || status.includes(searchInput);
+                } else if (filterCategory === "name") {
+                    isVisible = name.includes(searchInput);
+                } else if (filterCategory === "title") {
+                    isVisible = title.includes(searchInput);
+                } else if (filterCategory === "status") {
+                    isVisible = status.includes(searchInput);
+                }
+
+                // 검색어에 맞는 행만 표시
+                row.style.display = isVisible ? "" : "none";
+            });
+        }
+    </script>
 </body>
 </html>
