--- a/rd_question_write.html
+++ b/rd_question_write.html
@@ -51,8 +51,8 @@
                 </div>
             </nav>
             <div class="right-nav">
-                <a href="login.html">로그인</a>
-                <a href="signup.html">회원가입</a>
+                <a href="rd_login.html">로그인</a>
+                <a href="rd_signup.html">회원가입</a>
             </div>
         </div>
     </header>
@@ -73,7 +73,7 @@
 
                 <div class="button-group">
                     <button type="submit" class="submit-button">글 등록하기</button>
-                    <button type="button" class="cancel-button">목록보기</button>
+                    <button type="button" class="cancel-button" onclick="window.location.href='rd_q_and_a.html'">목록보기</button>
                 </div>
             </form>
         </div>
