--- a/rd_find_id.html
+++ b/rd_find_id.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Integrated R&D Development Platform - Sign Up</title>
-    <link rel="stylesheet" href="rd_signupstyle.css">
+    <title>Integrated R&D Development Platform - Login</title>
+    <link rel="stylesheet" href="rd_find_id_style.css">
 </head>
 <body>
     <!-- Header -->
@@ -53,22 +53,18 @@
         </div>
     </header>
 
-    <!-- 회원가입 섹션 -->
-    <section class="signup-section">
-        <div class="signup-container">
-            <h2>Sign UP</h2>
+    <!-- 아이디 찾기 섹션 -->
+    <section class="find_id-section">
+        <div class="find_id-container">
+            <h2>아이디 찾기</h2>
             <form>
                 <input type="text" placeholder="이름" required>
-                <input type="text" placeholder="이메일" required>
-                <input type="text" placeholder="아이디" required>
-                <input type="password" placeholder="비밀번호" required>
-                <input type="password" placeholder="비밀번호 확인" required>
-                <button type="submit">가입하기</button>
+                <input type="password" placeholder="이메일" required>
+                <button type="submit">아이디 찾기</button>
             </form>
-            <div class="additional-links">
-                <a href="rd_login.html" class="login-link">Login</a> |
-                <a href="rd_find_id.html" class="find-id-pw-link">ID/PW 찾기</a>
-            </div>
+            <a href="rd_login.html" class="login-link">로그인</a>|
+            <a href="rd_signup.html" class="signup-link">가입하기</a>
+            <a href="rd_find_pw.html" class="signup-link">비밀번호 찾기</a>
         </div>
     </section>
 
@@ -80,4 +76,4 @@
         </nav>
     </footer>
 </body>
-</html>
+</html> 
