--- a/rd_login.html
+++ b/rd_login.html
@@ -62,7 +62,8 @@
                 <input type="password" placeholder="비밀번호" required>
                 <button type="submit">로그인</button>
             </form>
-            <a href="rd_signup.html" class="signup-link">가입하기</a>
+            <a href="rd_signup.html" class="signup-link">가입하기</a> |
+            <a href="rd_find_id.html" class="find-id-pw-link">ID/PW 찾기</a>
         </div>
     </section>
 
