--- a/rd_find_id.html
+++ b/rd_find_id.html
@@ -63,7 +63,7 @@
                 <button type="submit">아이디 찾기</button>
             </form>
             <a href="rd_login.html" class="login-link">로그인</a>|
-            <a href="rd_signup.html" class="signup-link">가입하기</a>
+            <a href="rd_signup.html" class="signup-link">가입하기</a>|
             <a href="rd_find_pw.html" class="signup-link">비밀번호 찾기</a>
         </div>
     </section>
